--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
     "private": true,
-    "workspaces": ["packages/*"]
+    "workspaces": {
+        "packages": ["packages/*"],
+        "nohoist": ["**/@nomiclabs/**", "**/typescript", "**/ts-node", "**/@typechain/**"]
+    }
 }
