--- a/packages/shibboleth-js/package.json
+++ b/packages/shibboleth-js/package.json
@@ -31,16 +31,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "@shibboleth/issuer-js",
-  "author": "Nick Johnson",
-  "module": "dist/issuer.esm.js",
+  "name": "@shibboleth/shibboleth-js",
+  "author": "Nick Johnson <arachnid@notdot.net>",
+  "module": "dist/shibboleth.esm.js",
   "size-limit": [
     {
-      "path": "dist/issuer.cjs.production.min.js",
+      "path": "dist/shibboleth.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/issuer.esm.js",
+      "path": "dist/shibboleth.esm.js",
       "limit": "10 KB"
     }
   ],
@@ -53,6 +53,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.5.0",
     "@ethersproject/bytes": "^5.5.0",
     "@ethersproject/keccak256": "^5.5.0",
     "@ethersproject/random": "^5.5.0",
