Add string representation of claim codes

--- a/packages/shibboleth-js/package.json
+++ b/packages/shibboleth-js/package.json
@@ -54,8 +54,10 @@
   },
   "dependencies": {
     "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/basex": "^5.5.0",
     "@ethersproject/bytes": "^5.5.0",
     "@ethersproject/keccak256": "^5.5.0",
+    "@ethersproject/logger": "^5.5.0",
     "@ethersproject/random": "^5.5.0",
     "@ethersproject/signing-key": "^5.5.0",
     "@ethersproject/solidity": "^5.5.0",
