--- a/packages/arm32-issuer/mbed_app.json
+++ b/packages/arm32-issuer/mbed_app.json
@@ -6,7 +6,7 @@
             "target.components_add": ["FLASHIAP"],
             "target.clock_source": "USE_PLL_MSI",
             "platform.callback-nontrivial": true,
-            "events.shared-stacksize": 8192
+            "rtos.main-thread-stack-size": 8192
         }
     },
     "macros": ["uECC_CURVE=uECC_secp256k1"]
