--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "OpenZeppelin/openzeppelin-contracts#master",
-    "@shibboleth/shibboleth-js": "0.2.0",
+    "@xenium-eth/xenium-js": "0.2.0",
     "clones-with-immutable-args": "^1.0.0"
   },
   "scripts": {
