--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@usedapp/core": "^0.10.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "@xenium-eth/validator": "0.2.0",
     "@xenium-eth/xenium-js": "0.2.0",
     "antd": "^4.18.5",
     "ethers": "^5.5.3",
+    "framer-motion": "^6.2.3",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "@types/styled-components": "^5.1.21",
     "eslint": "7",
     "eslint-config-next": "12.0.9",
     "typescript": "4.5.5"
