--- a/packages/validator/tsconfig.json
+++ b/packages/validator/tsconfig.json
@@ -5,8 +5,9 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
-  "include": ["./scripts", "./test", "./typechain"],
-  "files": ["./hardhat.config.ts", "./test/parseMetadata.ts"]
+  "include": ["typechain"],
+  "exclude": ["node_modules"]
 }
