--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@xenium-eth/validator",
   "version": "0.2.0",
+  "files": ["dist", "artifacts", "contracts", "deployments"],
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
@@ -8,6 +11,7 @@
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.0",
+    "@types/cors": "^2.8.12",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.40",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -37,10 +41,11 @@
   "dependencies": {
     "@openzeppelin/contracts": "OpenZeppelin/openzeppelin-contracts#master",
     "@xenium-eth/xenium-js": "0.2.0",
-    "clones-with-immutable-args": "^1.0.0"
+    "clones-with-immutable-args": "^1.0.0",
+    "cors": "^2.8.5"
   },
   "scripts": {
-    "build": "hardhat compile",
+    "build": "hardhat compile && tsc",
     "test": "hardhat test"
   }
 }
