--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -43,7 +43,7 @@
     "@openzeppelin/contracts": "OpenZeppelin/openzeppelin-contracts#master",
     "@xenium-eth/xenium-js": "0.2.0",
     "clones-with-immutable-args": "^1.0.0",
-    "solidity-cborutils": "^1.0.7"
+    "solidity-cborutils": "github:smartcontractkit/solidity-cborutils"
   },
   "scripts": {
     "build": "hardhat compile && tsc",
