--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@usedapp/core": "^0.10.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/poppins": "^4.5.1",
+    "@fontsource/roboto": "^4.5.3",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
+    "@usedapp/core": "^0.11.0",
     "@walletconnect/web3-provider": "^1.7.1",
     "@xenium-eth/validator": "0.2.0",
     "@xenium-eth/xenium-js": "0.2.0",
-    "antd": "^4.18.5",
+    "cbor": "^8.1.0",
     "ethers": "^5.5.3",
     "framer-motion": "^6.2.3",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
