--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@ensdomains/ens-avatar": "^0.1.0",
     "@fontsource/poppins": "^4.5.1",
     "@fontsource/roboto": "^4.5.3",
     "@mui/icons-material": "^5.4.1",
