--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,10 +19,12 @@
     "@fontsource/roboto": "^4.5.3",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "@types/antd": "^1.0.0",
     "@usedapp/core": "^0.11.0",
     "@walletconnect/web3-provider": "^1.7.1",
     "@xenium-eth/validator": "0.2.0",
     "@xenium-eth/xenium-js": "0.2.0",
+    "antd": "^4.19.5",
     "cbor": "^8.1.0",
     "ethers": "^5.5.3",
     "framer-motion": "^6.2.3",
